# gym-api-rust

./: .env  Cargo.toml  README.md
migrations/2023-08-20-062152_users/: up.sql
migrations/2023-08-22-052221_test_my/: down.sql  up.sql
migrations/2023-08-24-044636_password_user/: down.sql  up.sql
migrations/2023-09-07-040446_gym/: down.sql  up.sql
migrations/2023-09-09-094223_activities/: down.sql  up.sql
migrations/2023-09-10-061643_slots/: down.sql  up.sql
migrations/2023-09-12-050521_appointments/: down.sql  up.sql
migrations/2023-09-14-164952_appointments_slots/: down.sql  up.sql
migrations/2023-09-15-043901_users_gym/: down.sql  up.sql
src/: errors.rs  jwt_auth.rs  main.rs  models.rs  schema.rs  token.rs
src/DTO/: mod.rs  slots_appotiments_DTO.rs
src/handlers/: login_handler.rs  mod.rs  test_me_handler.rs  user_handler.rs
src/handlers/activities/: create_activity.rs  delete_activities.rs  get_activities.rs  mod.rs  update_activity.rs
src/handlers/appointments/: create_appointments.rs  get_appointments.rs  get_appoitments_by_user.rs  mod.rs  update_appointment.rs
src/handlers/gym/: create_gym.rs  delete_gym.rs  get_gym.rs  mod.rs  update_gym.rs
src/handlers/slots/: create_slots.rs  delete_slots.rs  get_slots.rs  mod.rs  update_slots.rs
src/handlers/users/: add_user_in_gym.rs  get_user.rs  login_handler.rs  mod.rs  update_user_handler.rs  user_handler.rs
src/input_model/: activities_models.rs  appointment_model.rs  gym_input_model.rs  mod.rs  slots_models.rs
src/utils/: dates.rs
