[package]
name = "gym-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.0"
r2d2 = "0.8.10"
uuid = {version ="1.4.1", features = ['v4']}
derive_more = "0.99.17"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono","uuid", "num-integer"] }
serde_json = "1.0"
